RagnaBeat improvements: - Added missing 1/3 and 2/3 rune symbols. - Made the symbols respect BPM changes in the map. - Various performance improvements to ensure the preview works in roughly 60fps without desyncing even on mobile devices.

--- a/assets/styles/ragna-beat.scss
+++ b/assets/styles/ragna-beat.scss
@@ -156,11 +156,26 @@ $level10: #e2cd6c;
   float: right;
   width: 150px;
 }
-
 #ragna-canvas {
-  background-color: #3c3c3c;
-  display: block;
+  position: relative;
+  width: 300px;
+  height: 600px;
   margin: 0 auto;
+}
+#ragna-bg-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3c3c3c;
+}
+#ragna-main-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 #ragna-beat-info {
   text-align: center;
